test/files/neg/macro-override-abstract-overrides-macro.check
Macros_Test_2.scala:7: error: macro expansion B violates bounds  <: C of the overridden type T in trait T2
  type T = M.T
             ^
Macros_Test_2.scala:14: error: macro expansion B violates bounds  <: C of the overridden type T in class C2
  type T = M.T
             ^
Macros_Test_2.scala:21: error: macro expansion B violates bounds  <: C of the overridden type T in trait T2
  type T = M.T
             ^
Macros_Test_2.scala:28: error: macro expansion B violates bounds  <: C of the overridden type T in class C2
  type T = M.T
             ^
four errors found
